2015-04-04  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--download-and-read-archives): Add
	`package-archives' to `package--downloads-in-progress' instead of
	overwriting it.

2015-04-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-flush-directory-property): Quote directory
	name when used in regexp.

2015-04-04  Alan Mackenzie  <acm@muc.de>

	Fix debbugs#20240 part two (jit-lock error during `comment-dwim').

	* jit-lock.el (jit-lock-after-change): Widen the buffer before
	putting 'fontified text properties.

2015-04-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-flush-file-property)
	(tramp-flush-directory-property): Use `directory-file-name' of the
	truename.  (Bug#20249)

2015-04-03  Nicolas Richard  <theonewiththeevillook@yahoo.fr>

	* pcmpl-unix.el (pcmpl-ssh-known-hosts): Use `char-before' instead
	of `looking-back' (bug#17284).

2015-04-03  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/js.el (js-indent-line): Do nothing when bol is inside
	a string (https://github.com/mooz/js2-mode/issues/227).

2015-04-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (define-abbrev-table): Treat a non-string "docstring" as
	part of the "props" arguments rather than silently ignoring it.

	* emacs-lisp/lisp-mnt.el (lm-version): Don't burp in a non-file buffer.

2015-04-01  Alan Mackenzie  <acm@muc.de>

	Fix the CC Mode fixes from 2015-03-30.  Fixes debbugs#20240.

	* progmodes/cc-mode.el (c-extend-after-change-region):
	Widen before applying text properties.
	* progmodes/cc-langs.el (c-before-font-lock-functions): Update an
	entry to a new function name.

2015-04-01  Paul Eggert  <eggert@cs.ucla.edu>

	* emacs-lisp/package.el: Spelling fixes and use active voice.

2015-04-01  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el: Implement asynchronous refreshing.
	(package--with-work-buffer-async)
	(package--check-signature-content)