@@ -3,6 +3,7 @@
 	* emacs-lisp/package.el (package--download-and-read-archives): Add
 	`package-archives' to `package--downloads-in-progress' instead of
 	overwriting it.
+	(package--with-work-buffer-async): Protect macro arguments.
 
 2015-04-04  Michael Albinus  <michael.albinus@gmx.de>
 
